# Nokia-PK-2022

UE/Application/: Application.cpp  Application.cpp.autosave  Application.hpp  CMakeLists.txt
UE/Application/Models/: Sms.cpp  Sms.hpp  SmsDb.cpp  SmsDb.hpp
UE/Application/Ports/: BtsPort.cpp  IBtsPort.hpp  UserPort.cpp  UserPort.hpp
UE/Application/States/: BaseState.cpp  BaseState.hpp  CallState.cpp  CallState.hpp  ConnectedState.cpp  ConnectedState.hpp  DialNumberState.cpp  DialNumberState.hpp  InCallState.cpp  InCallState.hpp  SendingSmsState.cpp  SendingSmsState.hpp  ViewSmsListState.cpp  ViewSmsListState.hpp  ViewSmsState.cpp  ViewSmsState.hpp
UE/Tests/Application/: ApplicationTestSuite.cpp
UE/Tests/Application/Mocks/: IBtsPortMock.hpp  IUserPortMock.hpp
